create adult reasoning task

--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -153,6 +153,38 @@ button {
     }
   }
 
+  &.secondary--wide {
+    @extend .button-base;
+    background: $bg-button-primary;
+    padding: $button-primary-padding;
+    border-color: $bg-accent_secondary;
+    box-shadow: $button-default-box-shadow rgba($bg-accent_secondary, 0.5) inset;
+    font-size: $font-size-xs;
+    font-weight: $font-weight-dark;
+    color: $txt-white;
+
+    @include respond-to('small') {
+      font-size: $font-size-xxs;
+      font-weight: $font-weight-normal;
+      color: $txt-white;
+      padding: $button-primary-padding-small;
+      border-radius: $button-default-border-radius-small;
+    }
+
+    &:hover {
+      background: $bg-button-primary-hover;
+      border-color: $border-button-primary-hover;
+      box-shadow: $bg-button-secondary inset;
+    }
+
+    &:active {
+      background: $bg-button-primary-clicked;
+      border-color: $border-button-primary-clicked;
+      box-shadow: $button-secondary-box-shadow $border-button-primary-clicked inset,
+        $button-secondary-inner-shadow $bg-button-secondary inset;
+    }
+  }
+
   &.replay {
     // This is also used by the Hearts and Flowers task
     position: absolute;
