adding some new definitions

--- a/task-launcher/src/styles/abstracts/_fonts.scss
+++ b/task-launcher/src/styles/abstracts/_fonts.scss
@@ -1,7 +1,9 @@
 $font-size-xxl: 85px;
 $font-size-xl: 72px;
 $font-size-l: 64px;
+$font-size-lm: 56px;
 $font-size-m: 48px;
+$font-size-ms: 42px;
 $font-size-s: 40px;
 $font-size-xs: 32px;
 $font-size-xxs: 24px;
