--- a/task-launcher/src/styles/components/_popups.scss
+++ b/task-launcher/src/styles/components/_popups.scss
@@ -29,3 +29,16 @@
     }
   }
 }
+
+.lev-overlay-default {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $bg-white-80;
+}
