--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -164,17 +164,17 @@ button {
   &.replay {
     // This is also used by the Hearts and Flowers task
     position: absolute;
-    top: 8px;
-    right: 8px;
+    top: $replay_btn_pos;
+    right: $replay_btn_pos;
     cursor: pointer;
-    border-radius: 16px;
-    padding: 16px;
+    border-radius: min(16px, 2vh);
+    padding: min(16px, 2vh);
     background-color: rgba($bg-button-primary, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 64px;
-    height: 64px;
+    width: $replay_btn_size;
+    height: $replay_btn_size;
     border: 2px solid $border-button-accent;
 
     @include respond-to('small') {
