--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -101,7 +101,7 @@
     border: 3px solid $bg-accent_secondary;
     border-radius: 32px;
     background-color: $bg-bubble-base;
-    width: 90vw;
+    width: calc(100vw - 2 * ($replay_btn_size + $replay_btn_pos + $lev-spacing-s));
     max-width: max-content; 
 
     p {
@@ -149,12 +149,14 @@
   width: 100%;
   max-width: 900px;
   justify-content: center;
-  margin-top: 64px;
+  margin-top: calc($replay_btn_size + $replay_btn_pos);
   margin-bottom: 16px;
   align-items: center;
 
   img {
     max-width: 100%;
+    width: calc(3 * $response-size-default);
+    height: calc(3 * $response-size-default);
   }
 }
 
@@ -165,7 +167,7 @@
   justify-content: center;
   font-size: $font-size-l;
   color: $txt-primary;
-  margin: $lev-spacing-s 0;
+  // margin: min($lev-spacing-s, 3vh) 0;
 
   img {
     border: none;
@@ -173,7 +175,7 @@
     height: $lev-resized-buttons-2;
     padding: 0;
     margin: 0;
-    border-radius: $lev-spacing-s;
+    border-radius: min($lev-spacing-s, 3vh);
   }
 }
 
