--- a/task-launcher/src/styles/abstracts/_variables.scss
+++ b/task-launcher/src/styles/abstracts/_variables.scss
@@ -14,11 +14,13 @@ $button-secondary-inner-shadow: 0px 0px 12px 0px;
 $response-size-default-width: clamp(120px, 10vw, 150px);
 $response-size-default-height: 15vh;
 $response-size-sm-width: clamp(100px, 18vw, 150px);
+$response-size-m-width: calc(clamp(70px, 22vw, 250px) - 10px);
+$response-size-m-height: 38vh;
 
 $response-size-default: min($response-size-default-width, $response-size-default-height);
 $response-size-sm: min($response-size-sm-width, $response-size-default-height);
 $response-size-s: 22vw;
-$response-size-m: calc(clamp(70px, 22vw, 250px) - 10px);
+$response-size-m: min($response-size-m-width, $response-size-m-height);
 
 // replay btn
 $replay_btn_size: min(64px, 8vh);
