allow scrolling auto

--- a/task-launcher/src/styles/pages/_roar-inference.scss
+++ b/task-launcher/src/styles/pages/_roar-inference.scss
@@ -74,6 +74,6 @@
 }
 
 .jspsych-display-element .jspsych-content-wrapper .jspsych-content {
-  overflow-x: scroll;
-  overflow-y: scroll;
+  overflow-x: auto;
+  overflow-y: auto;
 }
