--- a/task-launcher/src/styles/layout/_containers.scss
+++ b/task-launcher/src/styles/layout/_containers.scss
@@ -205,6 +205,29 @@
   }
 }
 
+.lev-stim-content-x-2 {
+  @extend .lev-stim-content;
+
+  img {
+    width: calc(2 * $response-size-default);
+    height: calc(2 * $response-size-default);
+  }
+
+  @include respond-to('small-medium') {
+    img {
+      width: calc(2 * $response-size-sm);
+      height: calc(2 * $response-size-sm);
+    }
+  }
+
+  @include respond-to('small') {
+    img {
+      width: 2 * $response-size-s;
+      height: 2 * $response-size-s;
+    }
+  }
+}
+
 .lev-instructions-container {
   text-align: center;
   font-size: 1.3rem;
