--- a/task-launcher/src/styles/pages/_corsi-blocks.scss
+++ b/task-launcher/src/styles/pages/_corsi-blocks.scss
@@ -16,10 +16,17 @@
   }
 
   .lev-corsi-block-override {
-    background-color: rgba(215, 215, 215, 0.93);
     width: 100%;
     height: 100%;
     border-radius: 2rem;
     border: 6px solid rgba(162, 162, 162, 0.93);
+  }
+
+  &.display {
+    background-color: rgba(215, 215, 215, 0.93);
+  }
+
+  &.input {
+    background-color: #ffffffcc;
   }
 }
