--- a/task-launcher/src/styles/components/_buttons.scss
+++ b/task-launcher/src/styles/components/_buttons.scss
@@ -285,7 +285,7 @@ button {
     }
   }
 
-  // no border radius for matrix reasoning buttons
+  // add padding for matrix reasoning buttons so that the image is not cut off
   &.image-matrix {
     @extend .button-base;
     padding: 0;
@@ -293,33 +293,30 @@ button {
     border-color: $bg-button-primary;
     min-width: unset !important;
     min-height: unset !important;
-    border-radius: 0;
+    background-color: $bg-bubble-base;
 
     img {
       border: none;
       width: $response-size-default;
       height: $response-size-default;
-      padding: 0;
+      padding: 1vh;
       margin: 0;
-      border-radius: 0;
       float: left;
     }
 
     @include respond-to('small-medium') {
-      border-radius: 0;
       img {
         width: $response-size-sm;
         height: $response-size-sm;
-        border-radius: 0;
+        padding: 1vh;
       }
     }
 
     @include respond-to('small') {
-      border-radius: 0;
       img {
         width: $response-size-s;
         height: $response-size-s;
-        border-radius: 0;
+        padding: 1vh;
       }
     }
 
